p2/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  ports:
    - name: "http"
      port: 80
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
    - name: "http"
      port: 80
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
    - name: "http"
      port: 80
      targetPort: 8080
